fix overflow bug

--- a/client/src/NavBar/NavBar.css
+++ b/client/src/NavBar/NavBar.css
@@ -32,7 +32,7 @@
 	font-weight: normal;
 }
 
-    @media screen and (max-width: 800px) {
+    @media screen and (max-width: 850px) {
         .navbar-strip {
             padding: 20px 0px;
         }
@@ -59,6 +59,7 @@
     .navbar-link:hover {
         background: -webkit-linear-gradient(360deg, hsl(280, 36%, 52%),hsl(209, 59%, 60%), hsl(181, 36%, 52%));
         -webkit-background-clip: text;
+        background-clip: text;
         -webkit-text-fill-color: transparent;
         /* transition: 0.5s ease; Doesn't work */
     }
@@ -66,12 +67,14 @@
     #software {
         background: -webkit-linear-gradient(360deg, hsl(280, 36%, 52%),hsl(209, 59%, 60%), hsl(181, 36%, 52%));
         -webkit-background-clip: text;
+        background-clip: text;
         -webkit-text-fill-color: transparent;
     }
 
     #software:hover {
         background: -webkit-linear-gradient(black, black);
         -webkit-background-clip: text;
+        background-clip: text;
         -webkit-text-fill-color: transparent;
     }
 
